apps/base/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`radarr-new.cruznet.io`)
    kind: Rule
    services:
    - name: radarr
      kind: Service
      port: 7878
  tls:
    secretName: radarr-cert
